--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 .App {
   text-align: center;
 }
@@ -24,10 +22,17 @@ nav{
   width: 100%; 
 }
 
+.navs li{
+  padding: 20px;
+}
+
+.navs li:last-child{
+  padding: 0px;
+}
+
 .navs li:hover{
   background-color:rgba(0,0,0,0.5);
   border-radius: 0.5em;
-  padding: 0 2em 0 2em;
 }
 
 .gradient{
@@ -36,8 +41,10 @@ nav{
   width: 100%;
   height: 100vh;
 }
->>>>>>> 96db56125cd5f7c908987c9c3a228c413c8f4caf
 
+.pad{
+  margin-top: -1.5em;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
