--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -1,6 +1,6 @@
 nav {
     display: flex;
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(0, 21, 41);
     color: white;
     align-items: center;
     height: 70px;
@@ -20,8 +20,21 @@ nav {
   margin: 0 20px;
 }
 
+.navs li:not(.navs li:last-child){
+  padding: 20px;
+}
+
+.navs li:last-child{
+  margin-left: 20px;
+}
+
+.navs li:hover{
+  background-color:rgba(0,0,0,0.5);
+  border-radius: 0.5em;
+}
+
 .navs li a:hover {
-  color: rgb(142, 241, 142) !important;
+  color: rgb(142, 241, 142) !important;  
 }
 
 .gradient {
@@ -39,4 +52,8 @@ nav {
 
 .welcome {
   color: white;
+}
+
+.mt-n{
+  margin-top: -1.5rem;
 }
