--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,28 @@
   color: #61dafb;
 }
 
+.logoo{
+  box-shadow: inset 0 0 100px 1px, 0 0 500px 1px;
+  border-radius: 800px;
+  margin-bottom: 50px;
+}
+
+.logo:hover {
+  animation: wobble 1s 1;
+  animation-iteration-count:infinite;
+}
+
+@keyframes wobble {
+
+  
+  50% {
+    transform: scale(1.05);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
