fine tuning intro page
add email sent logo
add email sent component
remove some unnessary code from nav

--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -71,6 +71,15 @@ nav {
   animation-iteration-count:infinite;
 }
 
+.lb{
+  font-size: x-large;
+  margin-top: 20px;
+}
+
+.bt{
+  margin-top: 20px;
+  width: 50%;
+}
 @keyframes wobble {
 
   
