Mobile view landing nav bar tuning

--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -98,4 +98,8 @@ nav {
     background-color: rgba(0,0,0,0.5);
     border-radius: 20px;
   }
+
+  .navs li:last-child{
+    margin-left: 0px;
+  }
 }
