--- a/src/css/bestReviews.css
+++ b/src/css/bestReviews.css
@@ -1,20 +1,20 @@
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 90%;
+    margin: auto;
+    grid-gap: 10px;
 }
 
 .funny-reviews, .helpful-reviews {
     width: 75%;
-    margin-left: 12.5%;
-    margin-right: 12.5%;
     height: 100%;
-    border: 3px inset rgb(122, 129, 136);
-    border-radius: 10px;
+    border: 1px solid black;
     color: #001529;
     border-radius: 20px;
-    margin-bottom: 50px;
-    padding: 25px;
+    padding: 15px;
+    min-width: 0;
 }
 
 .review-text {
@@ -26,6 +26,7 @@
 
 pre {
     margin: 0 0 0 0;
+    white-space: pre-wrap;
 }
 
 p {
