--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -81,9 +81,32 @@ nav {
   width: 50%;
 }
 
-.text-center .tutor-bt{
+.tutor-bt{
   margin: 100px;
 }
+
+.tutor{
+  width: 100%;
+  margin-top: 20px;
+}
+
+.tutor h1{
+  font-size: 50px;
+  margin-bottom: -30px;
+}
+
+.tutor-db{
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.tutor-db-value-demo{
+  color: greenyellow;
+  font-weight: bolder;
+  text-shadow: 0px 2px black;
+  font-size: 30px;
+}
+
 @keyframes wobble {
 
   
