--- a/src/css/bestReviews.css
+++ b/src/css/bestReviews.css
@@ -38,3 +38,46 @@ h {
     width: 50px;
     color: #001529
 }
+
+@media only screen and (max-width: 414px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        width: 90%;
+        margin: auto;
+        grid-gap: 10px;
+    }
+    
+    .funny-reviews, .helpful-reviews {
+        width: 75%;
+        height: 50%;
+        border: 1px solid black;
+        color: #001529;
+        border-radius: 20px;
+        padding: 15px;
+        min-width: 0;
+    }
+    
+    .review-text {
+        display: block;
+        font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;;
+        font-weight: 600;
+        color: #001529;
+    }
+    
+    pre {
+        margin: 0 0 0 0;
+        white-space: pre-wrap;
+    }
+    
+    p {
+        font-weight: 600;
+        color: #001529;
+    }
+    
+    h {
+        width: 50px;
+        color: #001529
+    }
+}
