Add some chart and header styles for all pages.

--- a/src/css/bestReviews.css
+++ b/src/css/bestReviews.css
@@ -1,19 +1,25 @@
 .funniest, .most-helpful {
-    border-width: 5px 0 5px;
+    border-width: 5px 0 5px 0;
     border-style: solid;
     border-image: repeating-radial-gradient(#ffb700, #ffe091);
     border-image-slice: 1;
     border-radius: 20px;
 }
 
+.funny, .helpful {
+    border-width: 0 0 5px 0;
+    border-color: black;
+    border-style: solid;
+}
+
 .funny-reviews, .helpful-reviews {
     width: 50%;
     height: 100%;
     color: #001529;
-    border-radius: 20px;
     padding: 15px;
     min-width: 0;
     margin: auto;
+
 }
 
 .review-text {
