--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -41,7 +41,9 @@ nav {
     background-image: linear-gradient(to right, white, #001529);
     display: inline-block;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
+    padding-bottom: 30px;
 }
 
 .welcome-container {
